[gd_scene load_steps=3 format=3 uid="uid://bc48l8tww2uj"]

[ext_resource type="FontFile" uid="uid://cqe0f5cadeqbk" path="res://assets/fonts/NormalFont.ttf" id="1_shoub"]
[ext_resource type="Script" path="res://scripts/stage_ui.gd" id="1_u41ed"]

[node name="StageUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u41ed")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 48.0
offset_bottom = 50.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_shoub")
theme_override_font_sizes/font_size = 10
text = "START"

[node name="PlayPauseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_shoub")
theme_override_font_sizes/font_size = 10
text = "PAUSE"

[node name="SpeedButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_shoub")
theme_override_font_sizes/font_size = 10
text = "1 X"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayPauseButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
